Try 2 with reCaptcha.

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -12,7 +12,7 @@
 				</li>
 				<li><a href="{{ site.url }}/about/"><span class="btn btn-inverse">Learn More</span></a></li>
 				{% if site.owner.email %}<li>
-					<a href="mailto:{{ site.owner.email }}"><i class="fa fa-fw fa-envelope"></i> Email</a>
+					<a href="http://www.google.com/recaptcha/mailhide/d?k=01NwyFqhfarZqu55K_AUX5Eg==&amp;c=yDtB3ADx4XW6ZfvdnqerFwdylpOOav1smrHpcwxli3U=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01NwyFqhfarZqu55K_AUX5Eg\x3d\x3d\x26c\x3dyDtB3ADx4XW6ZfvdnqerFwdylpOOav1smrHpcwxli3U\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address"><i class="fa fa-fw fa-envelope"></i>Email</a>
 					<!--<a href="http://www.google.com/recaptcha/mailhide/d?k=01NwyFqhfarZqu55K_AUX5Eg==&amp;c=yDtB3ADx4XW6ZfvdnqerFwdylpOOav1smrHpcwxli3U=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01NwyFqhfarZqu55K_AUX5Eg\x3d\x3d\x26c\x3dyDtB3ADx4XW6ZfvdnqerFwdylpOOav1smrHpcwxli3U\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">c...</a>@gmail.com-->
 				</li>{% endif %}
 				{% if site.owner.twitter %}<li>
