Manually forking Neo-HPSTR project into this project.
I like the header that the Neo-HPSTR fork took on this original HPSTR
project. Couldn't figure out how to do it with git, so had to simply
manually merge files. This is fairly close to baseline, with several
files still mathcing the HPSTR theme.

--- a/_sass/_coderay.scss
+++ b/_sass/_coderay.scss
@@ -1,13 +1,9 @@
-/* ==========================================================================
-   CodeRay Syntax Highlighting
-   ========================================================================== */
-
 .CodeRay {
   font-family: $code-font;
   @include font(12);
   color: #d0d0d0;
   margin-bottom: 1.5em;
-  border-radius: 3px;
+  @include rounded(3px);
 }
 
 .CodeRay .code pre {
