--- a/_sass/_rouge.scss
+++ b/_sass/_rouge.scss
@@ -1,26 +1,15 @@
-/* ==========================================================================
-   Syntax Highlighting
-   ========================================================================== */
-
-pre.highlight {
-	padding: 1em;
-}
-
 .highlight {
 	margin-bottom: 1.5em;
-	@include font-rem(12);
-	line-height: 1.5;
+	@include font(12);
 	color: #d0d0d0;
 	border: 1px solid darken($body-color, 5);
 	background-color: #272822;
-	border-radius: 3px;
-
+	@include rounded(3px);
 	pre {
 		position: relative;
 		margin: 0;
 		padding: 1em;
 	}
-
 	.lineno { padding-right: 24px; color: #8f908a;}
 	.hll { background-color: #49483e }
 	.c { color: #75715e } /* Comment */
