--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -19,8 +19,8 @@ sitemap: false
 @import "vendor/magnific-popup/magnific-popup";
 @import "site";
 @import "typography";
-@import "syntax";
-// @import "coderay";
+@import "rouge";
+@import "coderay";
 @import "grid";
 @import "elements";
 @import "animations";
