--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -4,7 +4,7 @@
     {% comment %} Link for previous page {% endcomment %}
     {% if paginator.previous_page %}
       {% if paginator.previous_page == 1 %}
-        <li><a href="{{ site.url }}" class="btn">Previous</a></li>
+        <li><a href="{{ site.url }}/" class="btn">Previous</a></li>
       {% else %}
         <li><a href="{{ site.url }}/page{{ paginator.previous_page }}/" class="btn">Previous</a></li>
       {% endif %}
@@ -14,7 +14,7 @@
     {% if paginator.page == 1 %}
       <li><strong class="current-page">1</strong></li>
     {% else %}
-      <li><a href="{{ site.url }}">1</a></li>
+      <li><a href="{{ site.url }}/">1</a></li>
     {% endif %}
 
     {% assign page_start = 2 %}
