--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -1,188 +1,156 @@
-/* ==========================================================================
-   Base Elements and Components
-   ========================================================================== */
-
-hr { 
-    display: block; 
-    margin: 1em 0; 
+hr {
+    display: block;
+    margin: 1em 0;
     padding: 0;
-    height: 1px; 
-    border: 0; 
+    height: 1px;
+    border: 0;
     border-top: 1px solid #ccc;
-    border-bottom: 1px solid #fff; 
+    border-bottom: 1px solid #fff;
 }
 
-/* 
-   Figures and images
-   ========================================================================== */
-
+// Figures and images
+// --------------------------------------------------
 figure {
   margin: 0;
   padding-top: 10px;
   padding-bottom: 10px;
   @include clearfix();
-
   img {
     margin-bottom: 10px;
   }
-
-  a { 
-
+  a {
     img {
-      transform: translate(0, 0);
-      transition-duration: 0.25s;
-
+      @include translate(0, 0);
+      -webkit-transition-duration: 0.25s;
+      -moz-transition-duration: 0.25s;
+      -o-transition-duration: 0.25s;
       &:hover {
-        transform: translate(0, -5px);
-        box-shadow: 0 0 10px rgba($base-color, 0.2);
+        @include translate(0, -5px);
+        @include box-shadow(0 0 10px fade($base-color, 20));
       }
     }
   }
-
-  /* 2 columns */
   &.half {
     @media #{$large} {
-
       img {
         width: 310px;
         float: left;
         margin-right: 10px;
       }
-
       figcaption {
         clear: left;
       }
     }
   }
-
-  /* 3 columns */
   &.third {
     @media #{$large} {
-
       img {
         width: 200px;
         float: left;
         margin-right: 10px;
       }
-
       figcaption {
         clear: left;
       }
     }
   }
 }
-
 svg:not(:root) {
-  overflow: hidden; 
+  overflow: hidden;
+}
+figure.center{
+  text-align: center;
 }
 
-/* 
-   Buttons
-   ========================================================================== */
-
+figure.center img{
+  float: none;
+}
+// Buttons
+// --------------------------------------------------
 .btn {
   display: inline-block;
   margin-bottom: 20px;
   padding: 8px 20px;
   @include font-rem(14);
   background-color: $primary;
-  color: #fff;
+  color: $white;
   border-width: 2px !important;
   border-style: solid !important;
   border-color: $primary;
-  border-radius: 3px;
-
+  @include rounded(3px);
   &:visited {
-    color: #fff;
+    color: $white;
   }
-
   &:hover {
-    background-color: #fff;
+    background-color: $white;
     color: $primary;
   }
 }
-
 .btn-inverse {
-  background-color: #fff;
+  background-color: $white;
   color: $primary;
-  border-color: #fff;
-
+  border-color: $white;
   &:visited {
     color: $primary;
   }
-
   &:hover {
     background-color: $primary;
-    color: #fff;
+    color: $white;
   }
 }
-
 .btn-success {
   background-color: $success;
-  color: #fff;
+  color: $white;
   border-color: $success;
-
   &:visited {
-    color: #fff;
+    color: $white;
   }
-
   &:hover {
-    background-color: #fff;
+    background-color: $white;
     color: $success;
   }
 }
-
 .btn-warning {
   background-color: $warning;
-  color: #fff;
+  color: $white;
   border-color: $warning;
-
   &:visited {
-    color: #fff;
+    color: $white;
   }
-
   &:hover {
-    background-color: #fff;
+    background-color: $white;
     color: $warning;
   }
 }
-
 .btn-danger {
   background-color: $danger;
-  color: #fff;
+  color: $white;
   border-color: $danger;
-
   &:visited {
-    color: #fff;
+    color: $white;
   }
-
   &:hover {
-    background-color: #fff;
+    background-color: $white;
     color: $danger;
   }
 }
-
 .btn-info {
   background-color: $info;
-  color: #fff;
+  color: $white;
   border-color: $info;
-
   &:visited {
-    color: #fff;
+    color: $white;
   }
-
   &:hover {
-    background-color: #fff;
+    background-color: $white;
     color: $info;
   }
 }
 
-/* 
-   Wells
-   ========================================================================== */
-
+// Well
+// --------------------------------------------------
 .well {
   padding: 20px;
   border: 1px solid $comp-color;
-  border-radius: 4px;
+  @include rounded(4px);
 }
