--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,7 +53,7 @@
       {% if page.date %}
         <h2><span class="entry-date date published updated"><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time></span></h2>
       {% else %}
-        <h2><span class="entry-date"><time>&nbsp;</time></span></h2>
+        <h2>{{ page.description }}</h2>
       {% endif %}
 
       {% if site.reading_time and page.layout == 'post' %}
