--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -20,13 +20,14 @@ body {
 // Colors
 // --------------------------------------------------
 $base-color				 : rgba(#222,0.8);
-$header-color			 : rgba(#000,0.8);
+$header-color			 : rgba(#000,0.0);
 $sub-item-color			 : rgba(#000, 0.1);
 $header-margin			 : #F45145;
 $menu-top				 : white;
 $menu-height			 : 70px;
 $menu-overflow			 : #2E2E2E;
 $body-color      		 : #e8e8e8;
+$header-text-color	 : rgba(#2162AE,0.8);
 $text-color      		 : rgba(#222,0.8);
 $comp-color 	 		 : complement(#222);
 $border-color    		 : lighten(#222,60);
@@ -37,8 +38,8 @@ $link-color 		     : rgba(#222,0.8);
 $primary			     : #222;
 $success			     : #5cb85c;
 $warning			     : #dd8338;
-$danger				     : #C64537;
-$info				     : #308cbc;
+$danger				 : #C64537;
+$info				         : #308cbc;
 
 
 // Screen Size
