--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -205,10 +205,12 @@ header .entry-meta {
 		display: inline;
 		margin-left: 10px;
 		margin-right: 10px;
+		color: lighten($header-text-color,20);
 	}
 	li {
 		padding-left: 4px;
 		padding-right: 4px;
+		color: lighten($header-text-color,20);
 	}
 	.current-page {
 		font-weight: 700;
