--- a/_includes/head.html
+++ b/_includes/head.html
@@ -50,3 +50,8 @@
 {% unless background contains 'http://' or background contains 'https://' %}{% capture background %}{{ site.url }}/images/{{ background }}{% endcapture %}{% endunless %}
 <style type="text/css">body {background-image:url({{ background }});}</style>
 {% endif %}
+
+<!-- https://desiredpersona.com/google-analytics-jekyll/ -->
+{% if jekyll.environment == 'production' %}
+{% include analytics.html %}
+{% endif %}
