--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,7 +53,7 @@
       {% if page.date %}
         <h2><span class="entry-date date published updated"><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time></span></h2>
       {% else %}
-        <h2>{{ page.description }}</h2>
+        <h2>{{ page.subtitle }}</h2>
       {% endif %}
 
       {% if site.reading_time and page.layout == 'post' %}
@@ -67,6 +67,17 @@
             &nbsp;
           </p><!-- /.entry-reading-time -->
       {% endif %}
+		<div class="adsense" style="margin-bottom: 0px;">
+			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+			<!-- Made Mistakes 320x50 -->
+			<ins class="adsbygoogle"
+				 style="display:inline-block;width:320px;height:50px"
+				 data-ad-client="ca-pub-7328585512091257"
+				 data-ad-slot="7855747535"></ins>
+			<script>
+			(adsbygoogle = window.adsbygoogle || []).push({});
+			</script>
+		</div><!-- /.adsense -->
     </div><!-- /.header-title-wrap -->
   </div><!-- /.header-title -->
 </div><!-- /.entry-header -->
