Final updates before starting to add content
1-Updated mobile navbar to my preferences. Updated *.js to open
reCaptcha window for small menu envelope. Note that _main.js doesn't
appear to affect it, just scripts.min.js.
2-Updated header to display a subtitle for h2 and the date for h3. Had
to add a patch top margin to adsense until get that fixed all the way.
Removed &nbsp; from the header because I don't want extra space if its
not specified.
3-Reverted max height to original 300px value (since not being honored
anyway).
4-Reverted to HPSTR page css values for header and displaying header on
mobile version as well. Remove uppercase transform for h2 (since not
subtitle) and added h3 style for date.
4-In page.scss, added patch to get footnote/reversefootnote anchors to
account for the header. Couldn't get it to work without modifying the
padding, need to do this better.
5-Fixed header-menu so that it shows the title in the menu bar for
mobile version as well.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,10 +50,11 @@
   <div class="header-title">
     <div class="header-title-wrap">
       <h1>{{ page.title }}</h1>
-      {% if page.date %}
-        <h2><span class="entry-date date published updated"><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time></span></h2>
-      {% else %}
+      {% if page.subtitle %}
         <h2>{{ page.subtitle }}</h2>
+      {% endif %}
+      {% if page.date %}
+        <h3><span class="entry-date date published updated"><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time></span></h3>
       {% endif %}
 
       {% if site.reading_time and page.layout == 'post' %}
@@ -62,12 +63,8 @@
           {% assign readtime = content | strip_html | number_of_words | divided_by:site.words_per_minute %}
           Reading time ~{% if readtime <= 1 %}1 minute{% else %}{{ readtime }} minutes{% endif %}
         </p><!-- /.entry-reading-time -->
-      {% else %}
-          <p class="entry-reading-time">
-            &nbsp;
-          </p><!-- /.entry-reading-time -->
       {% endif %}
-		<div class="adsense" style="margin-bottom: 0px;">
+		<div class="adsense" style="margin-top: 20px;">
 			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 			<!-- Made Mistakes 320x50 -->
 			<ins class="adsbygoogle"
