--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -30,9 +30,21 @@ body {
 	}
 }
 
-///sections
-
-.content-header-title {
+// Entry Header
+// --------------------------------------------------
+.entry-header {
+	width: 100%;
+	overflow: hidden;
+	position: relative;
+	margin-top: $menu-height;
+}
+.header-toggle{
+	display: block;
+	@media #{$large} {
+		display: none;
+	}
+}
+.header-title {
 	text-align: center;
 	margin: 30px 0 0;
 	h1 {
@@ -50,10 +62,18 @@ body {
 	h2 {
 		margin: 0;
 		@include font-rem(18);
-		text-transform: uppercase;
 		color: lighten($base-color,40);
 		@media #{$medium} {
 			@include font-rem(24);
+		}
+	}
+	h3 {
+		margin: 8;
+		@include font-rem(14);
+		text-transform: uppercase;
+		color: lighten($base-color,60);
+		@media #{$medium} {
+			@include font-rem(20);
 		}
 	}
 	p {
@@ -192,6 +212,29 @@ header .entry-meta {
   margin-top: -$menu-height; /*same height as header*/
   visibility: hidden;
 }
+// Go to the exact location of bookmarks in footnotes. NOTE: Couldn't make it work like the anchor-bookmark solution above
+// by adding an invisible element before each target for the footnote/reversefootnote or fn/fnref classes. Only solution I could
+// find that works is add padding to the active anchored element (http://stackoverflow.com/questions/4086107). 
+sup[id] {
+  padding-top: $menu-height + 10; /*same height as header*/
+  margin-top: -$menu-height + 10; /*same height as header*/
+}
+li[id] {
+  padding-top: $menu-height; /*same height as header*/
+  margin-top: -$menu-height; /*same height as header*/
+}
+//.footnote:before {
+//	display: block;
+//	height: $menu-height; /*same height as header*/
+//	margin-top: -$menu-height; /*same height as header*/
+//	visibility: hidden;
+//}
+//.reversefootnote:before {
+//	display: block;
+//	height: 200px /*same height as header*/
+//	margin-top: -$menu-height; /*same height as header*/
+//	visibility: hidden;
+//}
 // Permalink icon for link post
 .permalink {
 	margin-right: 7px;
@@ -484,71 +527,71 @@ ul.social-buttons li a:active {
 	@extend .btn;
 }
 
-// Header
+// Header - Don't want changing based on size
 // --------------------------------------------------
-.entry-header {
-	width: 100%;
-	overflow: hidden;
-	position: relative;
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-	height: 50px;
-	@media #{$medium} {
-		background-color: $header-color;
-		min-height: 300px;
-	}
-}
-.header-toggle{
-	display: block;
-	@media #{$large} {
-		display: none;
-	}
-}
-.header-title {
-	text-align: center;
-	position: absolute;
-	bottom: 0;
-	display: table;
-	margin-top: 0;
-	width: 100%;
-	overflow: hidden;
-	.header-title-wrap {
-		display: table-cell;
-		vertical-align: middle;
-		margin: 0 auto;
-		text-align: center;
-	}
-	h2 {
-		color: $header-text-color;
-	}
-	h1 {
-		font-weight: 700;
-		margin-bottom: 20px;
-		@include font-rem(32);
-		color: $header-text-color;	
-		text-shadow: 1px 1px 4px lighten($black,20);
-		display: block;
-		a {
-			color: $header-text-color;
-		}
-		@media #{$medium} {
-			@include font-rem(26);
-		}
-		@media #{$large} {
-			@include font-rem(36);
-		}
-	}
-	h1.post-title{
-		display: block;
-		@media #{$medium}{
-			display: none;
-		}
-	}
-	p {
-		color: $header-text-color;
-	}
-}
+//.entry-header {
+//	width: 100%;
+//	overflow: hidden;
+//	position: relative;
+//	width: 100%;
+//	height: 100%;
+//	overflow: hidden;
+//	height: 50px;
+//	@media #{$medium} {
+//		background-color: $header-color;
+//		min-height: 300px;
+//	}
+//}
+// .header-toggle{
+// 	display: block;
+// 	@media #{$large} {
+// 		display: none;
+// 	}
+// }
+// .header-title {
+// 	text-align: center;
+// 	position: absolute;
+// 	bottom: 0;
+// 	display: table;
+// 	margin-top: 0;
+// 	width: 100%;
+// 	overflow: hidden;
+// 	.header-title-wrap {
+// 		display: table-cell;
+// 		vertical-align: middle;
+// 		margin: 0 auto;
+// 		text-align: center;
+// 	}
+// 	h2 {
+// 		color: $header-text-color;
+// 	}
+// 	h1 {
+// 		font-weight: 700;
+// 		margin-bottom: 20px;
+// 		@include font-rem(32);
+// 		color: $header-text-color;	
+// 		text-shadow: 1px 1px 4px lighten($black,20);
+// 		display: block;
+// 		a {
+// 			color: $header-text-color;
+// 		}
+// 		@media #{$medium} {
+// 			@include font-rem(26);
+// 		}
+// 		@media #{$large} {
+// 			@include font-rem(36);
+// 		}
+// 	}
+//	h1.post-title{
+//		display: block;
+//		@media #{$medium}{
+//			display: none;
+//		}
+//	}
+//	p {
+//		color: $header-text-color;
+//	}
+//}
 .header-menu {
 	position: fixed;
 	top: 0;
@@ -632,6 +675,9 @@ ul.social-buttons li a:active {
 		vertical-align: middle;
 		height: $menu-height - 2;
 		@media #{$medium}{
+			display: table-cell;
+		}
+		@media #{$small}{
 			display: table-cell;
 		}
 	}
