--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,15 +21,15 @@
           {% if page.image.credit %}<div class="image-credit">Image source: <a target="_blank" href="{{ page.image.creditlink }}">{{ page.image.credit }}</a></div><!-- /.image-credit -->{% endif %}
         </div>
       {% endif %}
-      <h1 class="post-title entry-title">{{ page.title }}</h1>
+	  <!--NOTE: I don't need to list the title and subtitle in the post since it's now in the header.-->
+      <h1 class="post-title entry-title"><!--{{ page.title }}--></h1>
 	  {% if page.subtitle %}
-		  <h2 class="post-subtitle">{{ page.subtitle }}</h2>
+		  <h2 class="post-subtitle"><!--{{ page.subtitle }}--></h2>
 	  {% endif %}
       {{ content }}
       <footer class="entry-meta">
         <span class="entry-tags">{% for tag in page.tags %}<a href="{{ site.url }}/tags#{{ tag }}" title="Pages tagged {{ tag }}" class="tag"><span class="term">{{ tag }}</span></a>{% unless forloop.last %}{% endunless %}{% endfor %}</span>
-        {% if page.modified %}<span>Updated on <span class="entry-date date updated"><time datetime="{{ page.modified }}">{{ page.modified | date: "%B %d, %Y" }}</time></span></span>
-        {% endif %}
+        {% if page.modified %}<span>Updated on <span class="entry-date date updated"><time datetime="{{ page.modified }}">{{ page.modified | date: "%B %d, %Y" }}</time></span></span>{% endif %}
         <span class="author vcard"><span class="fn">{{ site.owner.name }}</span></span>
         {% if page.share != false %}{% include social-share.html %}{% endif %}
       </footer>
