--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -45,6 +45,7 @@ $info				     : #308cbc;
 // Screen Size
 // --------------------------------------------------
 
+$xsmall               : "only screen and (min-width: 15em)";
 $small               : "only screen and (min-width: 30em)";
 $medium              : "only screen and (min-width: 48em)";
 $large               : "only screen and (min-width: 62.5em)";
