--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -62,6 +62,9 @@ body {
 			@include font-rem(48);
 		}
 		@media #{$large} {
+			max-width: 800px;
+			margin-left: auto;
+			margin-right: auto;
 			@include font-rem(60);
 		}
 	}
